modified:   index.html

--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
                                 self-taught since it is the most appropriate way
                                 to continue being up to date with the latest
                                 technologies, paradigms and methodologies that
-                                are applied and implemented in the world. of
-                                programming. I emphasize that I love astronomy,
+                                are applied and implemented in the world of
+                                programming. I emphasize that I love
                                 cosmology, I am very interested in physics and
                                 science in general. I do sports in my free time
                                 as it allows me to rest from the computer and
@@ -286,8 +286,7 @@
                             information and thus facilitate the audit and
                             administration work, with the data being centralized
                             in profit 2k12 for better manipulation and
-                            accounting since profit has strengths that stellar
-                            does not. As I mentioned before, this is one of my
+                            accounting. As I mentioned before, this is one of my
                             star projects that stands out the most in my
                             repertoire for the simple reason that it is
                             applicable to a large number of businesses that
