modified:   index.html

--- a/index.html
+++ b/index.html
@@ -276,17 +276,17 @@
                     <div class="section-title">
                         <h2>The most important</h2>
                         <p>
-                            As a software engineer I have had many
+                            As a software engineer i have had many
                             collaborations and many projects in my work area
                             such as web portals, applications, APIs and some
                             others, but the one that stands out the most within
                             my projects is the interface between the stellar and
-                            profit systems (Integration system), which I
+                            profit systems (Integration system), which i
                             developed so that two systems could handle common
                             information and thus facilitate the audit and
                             administration work, with the data being centralized
                             in profit 2k12 for better manipulation and
-                            accounting. As I mentioned before, this is one of my
+                            accounting. As i mentioned before, this is one of my
                             star projects that stands out the most in my
                             repertoire for the simple reason that it is
                             applicable to a large number of businesses that
