new file:   assets/img/testimonials/testimonials-5.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                         <li>
                                             <i class="bi bi-chevron-right"></i>
                                             <strong>City:</strong>
-                                            <span>Carcas, Venezuela</span>
+                                            <span>Caracas, Venezuela</span>
                                         </li>
                                         <li>
                                             <i class="bi bi-chevron-right"></i>
@@ -256,13 +256,13 @@
                                 to continue being up to date with the latest
                                 technologies, paradigms and methodologies that
                                 are applied and implemented in the world of
-                                programming. I emphasize that I love
-                                cosmology, I am very interested in physics and
-                                science in general. I do sports in my free time
-                                as it allows me to rest from the computer and
-                                connect with the real world to find new
-                                inspirations that drive me to engineer and do my
-                                work in a more optimal and efficient way.
+                                programming. I emphasize that I love cosmology,
+                                I am very interested in physics and science in
+                                general. I do sports in my free time as it
+                                allows me to rest from the computer and connect
+                                with the real world to find new inspirations
+                                that drive me to engineer and do my work in a
+                                more optimal and efficient way.
                             </p>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
                                 <i class="bi bi-emoji-smile"></i>
                                 <span
                                     data-purecounter-start="0"
-                                    data-purecounter-end="4"
+                                    data-purecounter-end="5"
                                     data-purecounter-duration="1"
                                     class="purecounter"
                                 ></span>
@@ -342,7 +342,7 @@
                                 <i class="bi bi-headset"></i>
                                 <span
                                     data-purecounter-start="0"
-                                    data-purecounter-end="1453"
+                                    data-purecounter-end="1937"
                                     data-purecounter-duration="1"
                                     class="purecounter"
                                 ></span>
@@ -848,7 +848,7 @@
                         <div
                             class="col-lg-4 col-md-6 icon-box"
                             data-aos="fade-up"
-                            data-aos-delay="500"
+                            data-aos-delay="600"
                         >
                             <div class="icon">
                                 <i class="bi bi-app-indicator"></i>
@@ -866,7 +866,7 @@
                         <div
                             class="col-lg-4 col-md-6 icon-box"
                             data-aos="fade-up"
-                            data-aos-delay="500"
+                            data-aos-delay="700"
                         >
                             <div class="icon">
                                 <i class="bi bi-app-indicator"></i>
@@ -902,10 +902,10 @@
                     </div>
                     <div
                         class="row row-cols-1 row-cols-lg-4 g-2 g-lg-3"
-                        data-aos="fade-up"
-                        data-aos-delay="200"
                     >
-                        <div class="col">
+                        <div class="col"
+                            data-aos="fade-up"
+                            data-aos-delay="200">
                             <div class="p-3">
                                 <img
                                     src="assets/img/testimonials/testimonials-1.png"
@@ -914,7 +914,9 @@
                                 />
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col"
+                            data-aos="fade-up"
+                            data-aos-delay="300">
                             <div class="p-3">
                                 <img
                                     src="assets/img/testimonials/testimonials-2.png"
@@ -923,7 +925,9 @@
                                 />
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col"
+                            data-aos="fade-up"
+                            data-aos-delay="400">
                             <div class="p-3">
                                 <img
                                     src="assets/img/testimonials/testimonials-3.png"
@@ -932,12 +936,25 @@
                                 />
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col"
+                            data-aos="fade-up"
+                            data-aos-delay="500">
                             <div class="p-3">
                                 <img
                                     src="assets/img/testimonials/testimonials-4.png"
                                     class="img-fluid rounded-top"
                                     alt="2doce Market"
+                                />
+                            </div>
+                        </div>
+                        <div class="col"
+                            data-aos="fade-up"
+                            data-aos-delay="600">
+                            <div class="p-3">
+                                <img
+                                    src="assets/img/testimonials/testimonials-5.png"
+                                    class="img-fluid rounded-top"
+                                    alt="Vida Viña"
                                 />
                             </div>
                         </div>
@@ -992,7 +1009,7 @@
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d125548.14824731769!2d-66.69944467679565!3d10.470709221668466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c2baad2d9120f71%3A0x7656864d0ea3f36e!2sGuarenas%2C%20Miranda%2C%20Venezuela!5e0!3m2!1ses-419!2sus!4v1712608396069!5m2!1ses-419!2sus"
                                     width="100%"
                                     height="450"
-                                    style="border:0;"
+                                    style="border: 0"
                                     allowfullscreen=""
                                     loading="lazy"
                                     referrerpolicy="no-referrer-when-downgrade"
