--- a/index.html
+++ b/index.html
@@ -657,8 +657,48 @@
 
                             <h3 class="resume-title">Education</h3>
                             <div class="resume-item">
+                                <h4>Administracion of servers</h4>
+                                <h5>2020</h5>
+                                <p>
+                                    <em
+                                        >Aprende.org</em
+                                    >
+                                </p>
+                            </div>
+                            <div class="resume-item">
+                                <h4>Python &amp; DJANGO</h4>
+                                <h5>2021</h5>
+                                <p>
+                                    <em
+                                        >Udemy</em
+                                    >
+                                </p>
+                            </div>
+                            <div class="resume-item">
                                 <h4>TSU. Computing &amp; Programing</h4>
-                                <h5>2021 - 2023</h5>
+                                <h5>2023</h5>
+                                <p>
+                                    <em
+                                        >Technological University Institute of
+                                        Industrial Administration (IUTA),
+                                        Caracas</em
+                                    >
+                                </p>
+                            </div>
+                            <div class="resume-item">
+                                <h4>Application Development</h4>
+                                <h5>Present</h5>
+                                <p>
+                                    <em
+                                        >Technological University Institute of
+                                        Industrial Administration (IUTA),
+                                        Caracas</em
+                                    >
+                                </p>
+                            </div>
+                            <div class="resume-item">
+                                <h4>Java &amp; Spring</h4>
+                                <h5>Present</h5>
                                 <p>
                                     <em
                                         >Technological University Institute of
@@ -677,9 +717,28 @@
                                 Professional Experience
                             </h3>
                             <div class="resume-item">
+                                <h4>Systems analyst</h4>
+                                <h5>2020</h5>
+                                <p><em>Chacao, Caracas</em></p>
+                                <ul>
+                                    <li>
+                                        Server administration and support
+                                        with Xetux.
+                                    </li>
+                                    <li>
+                                        Server administration and support
+                                        with Profit.
+                                    </li>
+                                    <li>
+                                        Network and support
+                                        administration.
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="resume-item">
                                 <h4>Senior Programer</h4>
                                 <h5>2021 - Present</h5>
-                                <p><em>Lebrun, Carcas</em></p>
+                                <p><em>Lebrun, Caracas</em></p>
                                 <ul>
                                     <li>
                                         Lead the design, development and
